--- a/app_setup.yaml
+++ b/app_setup.yaml
@@ -1,10 +1,7 @@
 ﻿-
     hosts: 127.0.0.1
     connection: local
-    gather_facts: no
-    vars:
-        -
-            user_home: "{{ lookup('env','HOME') }}"
+    gather_facts: yes
     tasks:
         -
             name: 'Install pip3'
