--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 amqp==2.4.0
+atomicwrites==1.2.1
+attrs==18.2.0
 backcall==0.1.0
 billiard==3.5.0.5
 celery==4.2.1
@@ -10,16 +12,22 @@ ipython==7.2.0
 ipython-genutils==0.2.0
 jedi==0.13.2
 kombu==4.2.2.post1
+mock==2.0.0
+more-itertools==5.0.0
 parso==0.3.2
+pbr==5.1.1
 pexpect==4.6.0
 pickleshare==0.7.5
 pika==0.13.0
 pkg-resources==0.0.0
+pluggy==0.8.1
 prompt-toolkit==2.0.7
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 ptyprocess==0.6.0
+py==1.7.0
 Pygments==2.3.1
+pytest==4.1.1
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
